[project]
name = "ansible-cyberark-utils"
version = "0.1.0"
description = "utility for checking out passwords through CyberArk API and putting them into Ansible inventory file"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=11.1.0",
    "ansible-vault>=2.1.0",
    "environs>=14.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pytest>=8.3.4",
    "requests-mock>=1.12.1",
]
